<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_firstname"
        android:hint="@string/hint_et_firstname">

    </EditText>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_lastname"
        android:hint="@string/hint_et_lastname">

    </EditText>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_addEmployee"
        android:text="@string/txt_btn_addEmployee"
        android:onClick="AddEmployeeToDB">

    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_updateEmployee"
        android:text="@string/txt_btn_updateEmployee"
        android:onClick="GoToUpdateEmployee">

    </Button>






</LinearLayout>


